tests/characterization/snapshots/manager_install__branch_binding.snap
---
source: tests/characterization/manager.rs
expression: "render_observation(&context, &output, &[\".metadata\"])"
---
exit: 0
--- stdout ---
Downloading manager from branch 'develop'
Bound manager_version=branch:develop
--- stderr ---
--- filesystem ---
.metadata
manager/
manager/.venv/
manager/pyproject.toml
--- selected files ---
--- .metadata ---
template=manager
install_root=<TEST_ROOT>/xdg-data/oqtopus/manager/releases
environment_name=demo
environment_root=<TEST_ROOT>/work
created_at=2031-12-13T14:15:16Z
manager_version=branch:develop
--- end ---
